==> zwxwill/New200m/rt-thread-master/bsp/imxrt/Libraries/drivers/drv_eth.c <==
#include <rtthread.h>
#include "board.h"
#include <rtdevice.h>
    #include <finsh.h>
#include "drv_eth.h"
#include "clock_config.h"
#include "fsl_gpio.h"
#include "fsl_iomuxc.h"
#include "fsl_enet.h"
#include "fsl_common.h"
#include "fsl_phy.h"
#include "ethernetif.h"
#define DRV_DEBUG
#define LOG_TAG             "drv.eth"
#include <drv_log.h>
#define MAX_ADDR_LEN        6
#define PHY_ADDRESS         0x02u  /* Phy address of enet port 0. */
#define ENET_RXBD_NUM      (5)
#define ENET_TXBD_NUM      (5)
#define ENET_RXBUFF_SIZE   (ENET_FRAME_MAX_FRAMELEN)
#define ENET_TXBUFF_SIZE   (ENET_FRAME_MAX_FRAMELEN)
#define ENET_RING_NUM       1U
    #define ENET_ATONEGOTIATION_TIMEOUT     (0xFFFU)

static rt_err_t rt_imxrt_eth_init(rt_device_t dev)
{
    LOG_D("rt_imxrt_eth_init...\n");
    enet_config();

    return RT_EOK;
}

static rt_err_t rt_imxrt_eth_control(rt_device_t dev, int cmd, void *args)
{
    LOG_D("rt_imxrt_eth_control...\n");
    switch (cmd)
    {
    case NIOCTL_GADDR:
        /* get mac address */
        if (args) 
        {
			rt_memcpy(args, imxrt_eth_device.dev_addr, 6);
		}
		else
		{
			return -RT_ERROR;
		}		 
        break;

    default :
        break;
    }

    return RT_EOK;
}

static rt_err_t rt_imxrt_eth_tx(rt_device_t dev, struct pbuf *p)
{
	rt_err_t result = RT_EOK;
	enet_handle_t * enet_handle = &imxrt_eth_device.enet_handle;

	RT_ASSERT(p != NULL);
	RT_ASSERT(enet_handle != RT_NULL);

//	LOG_D("rt_imxrt_eth_tx: %d\n", p->len);
	
#ifdef ETH_TX_DUMP
	packet_dump("send", p);
#endif
	
	do
	{
		result = ENET_SendFrame(imxrt_eth_device.enet_base, enet_handle, (const uint8_t *)(p->payload), p->tot_len);

		if (result == kStatus_ENET_TxFrameBusy)
		{
			imxrt_eth_device.tx_is_waiting = RT_TRUE;
			rt_sem_take(&imxrt_eth_device.tx_wait, RT_WAITING_FOREVER);
		}

	}
	while (result == kStatus_ENET_TxFrameBusy);

	return RT_EOK;

}

struct pbuf *rt_imxrt_eth_rx(rt_device_t dev)
{
	status_t status;
	uint32_t length = 0;
	enet_handle_t *enet_handle = &imxrt_eth_device.enet_handle;
	ENET_Type *enet_base = imxrt_eth_device.enet_base;
	struct pbuf *p = NULL;
	enet_data_error_stats_t *error_statistic = &imxrt_eth_device.error_statistic;

    /* Get the Frame size */
    status = ENET_GetRxFrameSize(enet_handle, &length);
	
	if (kStatus_ENET_RxFrameEmpty != status)
	{
        /* Call enet_read_frame when there is a received frame. */
        if (length != 0)
        {
			/* We allocate a pbuf chain of pbufs from the pool. */
			p = pbuf_alloc(PBUF_RAW, length, PBUF_POOL);
			if (p != NULL)
			{
                status = ENET_ReadFrame(enet_base, enet_handle, p->payload, length);
				if (status == kStatus_Success)
				{
#ifdef ETH_RX_DUMP
					packet_dump("recv", p);
#endif
					return p;
				}
				else
				{
					LOG_D(" A frame read failed");
					pbuf_free(p);
				}
			}
			else
			{
				LOG_D(" pbuf_alloc faild");
			}
		}
		else
		{
            /* Update the received buffer when error happened. */
            if (status == kStatus_ENET_RxFrameError)
            {
				LOG_W("ENET_GetRxFrameSize: kStatus_ENET_RxFrameError");
				/* Update the received buffer when error happened. */
				/* Get the error information of the received g_frame. */
				ENET_GetRxErrBeforeReadFrame(enet_handle, error_statistic);
				/* update the receive buffer. */
				ENET_ReadFrame(enet_base, enet_handle, NULL, 0);
			}
		}
	}
    ENET_EnableInterrupts(enet_base, kENET_RxFrameInterrupt);
    
	return p;
}

static void phy_monitor_thread_entry(void *parameter)
{
    status_t status;
    bool link = false;
	bool new_link = false;
    phy_speed_t speed;
    phy_duplex_t duplex;	

	rt_PHY_Init(imxrt_eth_device.enet_base, PHY_ADDRESS, CLOCK_GetFreq(kCLOCK_CoreSysClk));

	while(1)
	{	
		status = PHY_GetLinkStatus(imxrt_eth_device.enet_base, PHY_ADDRESS, &new_link);
		if ((status == kStatus_Success) && (link != new_link))
		{
			link = new_link;
			if (link)   // link up
			{
                PHY_GetLinkSpeedDuplex(imxrt_eth_device.enet_base, PHY_ADDRESS, &speed, &duplex);	
                if (kPHY_Speed10M == speed)
                {
                    LOG_D("eth speed : 10M\n");
                }
                else
                {
                    LOG_D("eth speed : 100M\n");
                }         

                if (kPHY_HalfDuplex == duplex)
                {
                    LOG_D("eth duplex : half dumplex\n");
                }
                else
                {
                    LOG_D("eth duplex : full dumplex\n");
                }		

                if (   (imxrt_eth_device.speed  != (enet_mii_speed_t)speed)
                    || (imxrt_eth_device.duplex != (enet_mii_duplex_t)duplex))
                {
                    imxrt_eth_device.speed  = (enet_mii_speed_t)speed;
                    imxrt_eth_device.duplex = (enet_mii_duplex_t)duplex;

                    LOG_D("link up, and update eth mode.\n");
                    rt_imxrt_eth_init((rt_device_t)&imxrt_eth_device);
                }
                else
                {
                    LOG_D("link up, eth not need re-config.\n");
                }			
                eth_device_linkchange(&imxrt_eth_device.parent, RT_TRUE);				
			}
			else
			{
                LOG_D("link down.\n");
                eth_device_linkchange(&imxrt_eth_device.parent, RT_FALSE);				
			}			
		}
		rt_thread_delay(RT_TICK_PER_SECOND * 2);
	}
}

static int rt_hw_imxrt_eth_init(void)
{
	rt_err_t state;
	
	enet_io_init();
	enet_clk_init();
	enet_phy_reset_by_gpio();

    imxrt_eth_device.dev_addr[0] = 0x02;
    imxrt_eth_device.dev_addr[1] = 0x12;
    imxrt_eth_device.dev_addr[2] = 0x13;	
    imxrt_eth_device.dev_addr[3] = 0x66;
    imxrt_eth_device.dev_addr[4] = 0x88;
    imxrt_eth_device.dev_addr[5] = 0x68;
	
    imxrt_eth_device.speed  = kENET_MiiSpeed100M;
    imxrt_eth_device.duplex = kENET_MiiFullDuplex;

	imxrt_eth_device.enet_base = ENET;

    imxrt_eth_device.parent.parent.init       = rt_imxrt_eth_init;
    imxrt_eth_device.parent.parent.open       = rt_imxrt_eth_open;
    imxrt_eth_device.parent.parent.close      = rt_imxrt_eth_close;
    imxrt_eth_device.parent.parent.read       = rt_imxrt_eth_read;
    imxrt_eth_device.parent.parent.write      = rt_imxrt_eth_write;
    imxrt_eth_device.parent.parent.control    = rt_imxrt_eth_control;
    imxrt_eth_device.parent.parent.user_data  = RT_NULL;

    imxrt_eth_device.parent.eth_rx     = rt_imxrt_eth_rx;
    imxrt_eth_device.parent.eth_tx     = rt_imxrt_eth_tx;

    LOG_D("sem init: tx_wait\r\n");
    /* init tx semaphore */
    rt_sem_init(&imxrt_eth_device.tx_wait, "tx_wait", 0, RT_IPC_FLAG_FIFO);

    /* register eth device */
    LOG_D("eth_device_init start\r\n");
    state = eth_device_init(&(imxrt_eth_device.parent), "e0");
    if (RT_EOK == state)
    {
        LOG_D("eth_device_init success\r\n");
    }
    else
    {
        LOG_D("eth_device_init faild: %d\r\n", state);
    }

	g_drv_eth_en = 1; /* eth rst pin is conflict with led pin */
	
//	eth_device_linkchange(&imxrt_eth_device.parent, RT_FALSE);

    /* start phy monitor */
    {
        rt_thread_t tid;
        tid = rt_thread_create("phy",
                               phy_monitor_thread_entry,
                               RT_NULL,
                               512,
                               RT_THREAD_PRIORITY_MAX - 2,
                               2);
        if (tid != RT_NULL)
            rt_thread_startup(tid);
    }

	return state;
}
